# L2

2_1/: Cargo.toml
2_1/src/: main.rs
2_10/: Cargo.toml
2_10/src/: args.rs  duration_parser.rs  main.rs
2_11/: Cargo.toml
2_11/src/: main.rs
2_11/src/application/: app_state.rs  event_params.rs  mod.rs
2_11/src/application/controllers/: create_event.rs  delete_event.rs  events_for_day.rs  events_for_month.rs  events_for_week.rs  mod.rs  update_event.rs
2_11/src/application/middlewares/: mod.rs  validators.rs
2_11/src/domain/: mod.rs
2_11/src/domain/interfaces/: event_service.rs  mod.rs  repository.rs
2_11/src/domain/models/: event.rs  mod.rs  time_range.rs
2_11/src/repository/: postgres.rs
2_11/src/services/: event_service.rs  mod.rs
2_2/: Cargo.toml
2_2/src/: lib.rs  main.rs  unpack_error.rs
2_2/tests/: unpack_tests.rs
2_3/: Cargo.toml
2_3/src/: args.rs  check.rs  compare.rs  main.rs  sort.rs
2_4/src/: main.rs
2_5/: Cargo.toml
2_5/src/: args.rs  main.rs
2_6/: Cargo.toml
2_6/src/: args.rs  main.rs
2_7/: Cargo.toml
2_7/src/: args.rs  main.rs  report.rs
2_8/: Cargo.toml
2_8/src/: main.rs  shell.rs
2_9/: Cargo.toml
2_9/src/: args.rs  main.rs
