[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.130"
deadpool-postgres = { version = "0.14.0", features = ["rt_tokio_1"] }
tokio-postgres = "0.7.12"
tower-http = { version = "0.6.1", features = ["trace"] }