[package]
name = "wgetrs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
scraper = "0.20.0"
url = "2.5.2"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "rt", "fs"] }
lazy_static = "1.5.0"